--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -86,7 +86,37 @@
     <script src="app/layouts/error/error.state.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
+    <script src="app/entities/product/product-dialog.controller.js"></script>
+    <script src="app/entities/product/product-detail.controller.js"></script>
+    <script src="app/entities/product/product-delete-dialog.controller.js"></script>
+    <script src="app/entities/product/product.state.js"></script>
+    <script src="app/entities/product/product.service.js"></script>
+    <script src="app/entities/product/product.controller.js"></script>
+    <script src="app/entities/orders/orders-dialog.controller.js"></script>
+    <script src="app/entities/orders/orders-detail.controller.js"></script>
+    <script src="app/entities/orders/orders-delete-dialog.controller.js"></script>
+    <script src="app/entities/orders/orders.state.js"></script>
+    <script src="app/entities/orders/orders.service.js"></script>
+    <script src="app/entities/orders/orders.controller.js"></script>
+    <script src="app/entities/order-details/order-details-dialog.controller.js"></script>
+    <script src="app/entities/order-details/order-details-detail.controller.js"></script>
+    <script src="app/entities/order-details/order-details-delete-dialog.controller.js"></script>
+    <script src="app/entities/order-details/order-details.state.js"></script>
+    <script src="app/entities/order-details/order-details.service.js"></script>
+    <script src="app/entities/order-details/order-details.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
+    <script src="app/entities/customer/customer-dialog.controller.js"></script>
+    <script src="app/entities/customer/customer-detail.controller.js"></script>
+    <script src="app/entities/customer/customer-delete-dialog.controller.js"></script>
+    <script src="app/entities/customer/customer.state.js"></script>
+    <script src="app/entities/customer/customer.service.js"></script>
+    <script src="app/entities/customer/customer.controller.js"></script>
+    <script src="app/entities/category/category-dialog.controller.js"></script>
+    <script src="app/entities/category/category-detail.controller.js"></script>
+    <script src="app/entities/category/category-delete-dialog.controller.js"></script>
+    <script src="app/entities/category/category.state.js"></script>
+    <script src="app/entities/category/category.service.js"></script>
+    <script src="app/entities/category/category.controller.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
     <script src="app/components/util/sort-by.directive.js"></script>
